# Mahjong

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  project-X.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/ai/: rule_based.py  shanten.py
backend/engine/: actions.py  deal.py  game_session.py  scorer.py  state.py  tiles.py  wall.py  win_validator.py
backend/server/: __main__.py  database.py  game_manager.py  serializer.py  ws_server.py
backend/tests/: conftest.py  test_actions.py  test_checkpoints.py  test_config.py  test_database.py  test_deal.py  test_env.py  test_game_manager.py  test_game_session.py  test_integration.py  test_metrics.py  test_network.py  test_observation.py  test_ppo.py  test_rewards.py  test_rule_based.py  test_scorer.py  test_self_play.py  test_serializer.py  test_shanten.py  test_state.py  test_tiles.py  test_train.py  test_wall.py  test_win_validator.py  test_ws_server.py
backend/training/: checkpoints.py  config.py  env.py  metrics.py  network.py  observation.py  ppo.py  rewards.py  self_play.py  train.py
docs/: how-to-start.md
docs/plans/: 2026-02-21-phase1-game-engine-design.md  2026-02-21-phase1-implementation-plan.md  2026-02-22-phase2-desktop-ui-design.md  2026-02-22-phase2-frontend-testing-bugfix.md  2026-02-22-phase2-implementation-plan.md  2026-02-22-phase2.5-implementation-plan.md  2026-02-22-phase2.5-ui-enhancement-design.md  2026-02-23-phase3-implementation-plan.md  2026-02-23-phase3-rl-training-design.md  2026-02-23-post-phase3-next-steps.md
frontend/: .pnpmfile-build-approval.cjs  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vitest.config.ts
frontend/electron/: main.js
frontend/src/: App.tsx  index.css
frontend/src/components/animations/: DiscardAnimation.tsx  DrawAnimation.tsx  MeldAnimation.tsx  WinAnimation.tsx
frontend/src/components/game/: ActionPanel.tsx  DiscardPool.tsx  FlowerArea.tsx  GameHeader.tsx  GameLog.tsx  GameTable.tsx  GameView.tsx  HandTiles.tsx  InspectOverlay.tsx  MeldArea.tsx  PlayerArea.tsx  (+2 more)
frontend/src/hooks/: useAnimationQueue.ts  useGameSocket.ts  useSettings.ts
frontend/src/pages/: DevTileGallery.tsx
frontend/src/store/: gameStore.ts
frontend/src/types/: game.ts
(+17 files in other folders)
