[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjong-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["engine*", "ai*", "server*", "training*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "aiosqlite>=0.20",
]
train = [
    "torch>=2.2",
    "pettingzoo>=1.24",
    "tensorboard>=2.16",
    "gymnasium>=0.29",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=engine --cov=ai --cov=server --cov-report=term-missing"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
source = ["engine", "ai", "server", "training"]
